Fixing overflow issue
Implementing the fix from @tayfuncetin, referenced here: https://github.com/joshgerdes/jekyll-uno/issues/42#issuecomment-263251559

Adapting the original Jekyll fix to the Hugo version of the theme.

--- a/static/css/uno.css
+++ b/static/css/uno.css
@@ -2033,6 +2033,7 @@ pre {
 
 .content-wrapper__inner {
   margin: 0 10%;
+  display:none;
   padding: 50px 0; }
 
 .footer {
